# PjsipDemo

./: README.md
Pjsip/app/: build.gradle
Pjsip/app/src/androidTest/java/com/lzlbuilder/pjsip/: ExampleInstrumentedTest.java
Pjsip/app/src/main/: AndroidManifest.xml
Pjsip/app/src/main/java/com/lzlbuilder/pjsip/: MainActivity.java
Pjsip/app/src/main/res/values/: strings.xml
Pjsip/app/src/test/java/com/lzlbuilder/pjsip/: ExampleUnitTest.java
Pjsip/siplib/: CMakeLists.txt  build.gradle
Pjsip/siplib/src/androidTest/java/com/lzlbuilder/siplib/: ExampleInstrumentedTest.java
Pjsip/siplib/src/main/: AndroidManifest.xml
Pjsip/siplib/src/main/cpp/: CMakeCache.txt  native-lib.cpp  pjsua2_wrap.cpp
Pjsip/siplib/src/main/cpp/pjproject-2.8/: CMakeLists.txt  aconfigure
Pjsip/siplib/src/main/cpp/pjproject-2.8/auto_config/arm64-v8a/pj/compat/: os_auto.h
Pjsip/siplib/src/main/cpp/pjproject-2.8/auto_config/armeabi-v7a/pj/compat/: os_auto.h
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjlib/include/pj/: config_site.h  log.h
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjlib/src/pj/: log.c  os_info.c  pool.c  pool_buf.c  pool_caching.c
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjlib/src/pjlib-test/: errno.c  exception.c  list.c  os.c  pool.c  pool_perf.c  rand.c  test.c
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjmedia/include/: pjmedia-codec.h
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjmedia/include/pjmedia-codec/: vid_mediacodec.h
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjmedia/src/pjmedia/: audiodev.c  codec.c  conference.c  delaybuf.c  echo_common.c  echo_webrtc.c  endpoint.c  format.c  g711.c  jbuf.c  port.c  resample_resample.c  sdp_neg.c  silencedet.c  sound_port.c  stream.c  tonegen.c  vid_codec.c  vid_codec_util.c  vid_stream.c  videodev.c  wav_player.c  wav_writer.c  wsola.c
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjmedia/src/pjmedia-audiodev/: android_jni_dev.c
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjmedia/src/pjmedia-codec/: audio_codecs.c  vid_mediacodec.c
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjmedia/src/test/: CMakeLists.txt  audio_tool.c  codec_vectors.c  jbuf_test.c  main.c  main.h  mips_test.c  rtp_test.c  sdp_neg_test.c  sdptest.c  session_test.c  test.c  test.cpp  test.h  vid_codec_test.c  vid_dev_test.c  vid_port_test.c  wsola_test.c
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip-apps/src/pjsua/: pjsua_app_legacy.c
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip-apps/src/pjsystest/: CMakeLists.txt  main_console.c  main_console.h  systest.c  systest.h  test.cpp
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip-apps/src/samples/: CMakeLists.txt  aectest.c  aectest.h  latency.c  level.c  playsine.c  recfile.c  simple_pjsua.c  simple_pjsua.h  test.cpp  util.h
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip-apps/src/swig/java/: sample.java
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip-apps/src/swig/java/android/app/src/main/: AndroidManifest.xml
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip-apps/src/swig/java/output/: pjsua2_wrap.cpp
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip/include/pjsua-lib/: pjsua_internal.h
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip/src/pjsip/: sip_endpoint.c  sip_msg.c  sip_parser.c  sip_transport_udp.c  sip_uri.c  sip_uri.c___jb_old___
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip/src/pjsip-ua/: sip_inv.c
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip/src/pjsua-lib/: pjsua_acc.c  pjsua_aud.c  pjsua_call.c  pjsua_core.c  pjsua_media.c  pjsua_vid.c
Pjsip/siplib/src/main/cpp/pjproject-2.8/pjsip/src/pjsua2/: endpoint.cpp
Pjsip/siplib/src/main/res/values/: strings.xml
Pjsip/siplib/src/test/java/com/lzlbuilder/siplib/: ExampleUnitTest.java
doc/: Account.md  Buddy.md  Call.md  Endpoint.md  PJLIB.md  PJSIP-Datasheet.txt  PJSIP.md  Pjsua2开发文档.md  SDP.md  SIP.md  readme.md  基于PJSIP的VOIP程序开发.cpp
doc/PJSUA/: Media.md  pjsua2_simple.cpp  pjsua_simple.c
doc/build_script/: build  config.conf
doc/docs/: SIP 仅响应报头字段.md  SIP 消息体报头字段.md  SIP 请求和响应报头字段.md  SIP仅请求报头字段.md  SIP示例.md  Sip.md  对讲SDK_工作计划表.xlsx  编译pjsip.md  音频参数.c
doc/docs/Audio/: PjSip音频.md  RTCP.md  RTP.md  WAV编码.md  jitter buffer.md  tone.md  噪声抑制.md  回声消除.md  开源总结.md  无线音箱的方案.md  时延及减小方法.md  智能手机音频框架.md  移动通信EVS.md  网络传输保障.md  语音通信中提高音质的方法.md  语音通信解决方案经验分享.md  质量评价.md  重采样.md  静音检测.md  音频.md  音频工具.md  音频算法学习.md
doc/docs/Audio/WebRTC/: WebRTC netEQ.md
doc/docs/Audio/demo/编解码与格式转换/WAV/Java/header/: wav_header.java
doc/docs/Audio/demo/编解码与格式转换/WAV/Java/pcm转wav/: PCMCovertWAV.java
doc/docs/Audio/demo/采集/Android/AudioRecord/: RecordHelper.java
doc/docs/Audio/技术实现/采集/opensl es/: opensl es.md
doc/docs/Video/: 图像处理技术.md
doc/server/: OpenSips.md
